--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <h1 class="sub-title">My Online Profiles</h1>
                 <div class="profile-lists">
                     <div>
-                        <i class="fa-solid fa-code-compare"></i>
+                        <i class="fa-solid fa-code"></i>
                         <h2>LeetCode</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae a facilis ratione atque, expedita laudantium ut nemo asperiores quis. Earum?
                         </p>
